# quint-trace-explorer

./: Cargo.toml  design.md
examples/: propeller.itf.json
src/: app.rs  diff.rs  main.rs  tree.rs
src/loader/: loader.rs  mod.rs
